deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa123
  labels:
    owner: user.agilebank.demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa
  template:
    metadata:
      labels:
        app: opa
    spec:
      containers:
      - name: opa
        image: sathya0803/opa-task:v.20
        command: ["/main"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
      restartPolicy: Always
